// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordInput > renders a hint 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <p
      class="_hint_9056a7"
      id="password-hint"
    >
      At least 8 characters
    </p>
    <div
      class="_wrapper_9056a7"
    >
      <input
        aria-describedby="password-hint"
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders an error message 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <p
      class="_error_9056a7"
      id="password-error"
    >
      Enter your password
    </p>
    <div
      class="_wrapper_9056a7"
    >
      <input
        aria-describedby="password-error"
        aria-invalid="true"
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7 _fieldError_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders masked by default with a "Show" toggle 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > stacks hint and error message ids in aria-describedby 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <p
      class="_hint_9056a7"
      id="password-hint"
    >
      At least 8 characters
    </p>
    <p
      class="_error_9056a7"
      id="password-error"
    >
      Enter your password
    </p>
    <div
      class="_wrapper_9056a7"
    >
      <input
        aria-describedby="password-hint password-error"
        aria-invalid="true"
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7 _fieldError_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;
